Fix stylesheet name

--- a/src/article.html
+++ b/src/article.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<title>Design trends in 2017</title>
 	<meta charset="utf-8" />
 	<meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-  <link rel="stylesheet" href="/assets/stylesheets/application.css">
+  <link rel="stylesheet" href="/assets/stylesheets/article.css">
 </head>
 <body>
 	<article>
