Update readme, code style improvements

--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
         <ul>
           <li><a href="exercise_01.html" target="_blank">Your first page</a></li>
           <li><a href="exercise_02.html" target="_blank">Making things pretty</a></li>
-          <li><a href="exercise_03.html" target="_blank">Let's build a layout</a></li>
-          <li><a href="exercise_04.html" target="_blank">Let's build an article</a></li>
+          <li><a href="exercise_03.html" target="_blank">Responsive Design</a></li>
+          <li><a href="exercise_04.html" target="_blank">Let's build a blog post</a></li>
         </ul>
       </section>
     </main>
